--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="http://run.south.im/tech">TECH</a></li>
       </ul>
       <p class="source-code">
-        <a href="http://github.com/smallmultiples/wds2013" title="smallmultiples/wds2013">View the source on Github</a>
+        <a href="http://github.com/smallmultiples/south.im" title="smallmultiples/south.im">View the source on Github</a>
       </p>
     </section>
 
