--- a/tech.html
+++ b/tech.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>TECHNOLOGY — SOUTH.IM</title>
     <script type="text/javascript" src="//use.typekit.net/fgf1fzz.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
